--- a/index.html
+++ b/index.html
@@ -114,8 +114,6 @@
                         </div>
                     </div>
 
-
-
                     <div class="descricoes">
                         <h3>CONEXÕES</h3>
                         <p>Contando com <span class="red-no-texto">2 x HDMI, 2 x DP e 1 x Saída de Áudio</span>,
@@ -163,13 +161,13 @@
                     </div>
 
                     <div class="redes-sociais">
-                        <a href="www.instagram.com/pichauoficial"><img class="img-links-social"
+                        <a href="https://www.instagram.com/pichauoficial/"><img class="img-links-social"
                                 src="./src/assets/Instagram.png" alt=""></a>
-                        <a href="www.facebook.com/PichauInfo/"><img class="img-links-social"
+                        <a href="https://www.facebook.com/PichauInfo/?locale=pt_BR"><img class="img-links-social"
                                 src="./src/assets/Facebook.png" alt=""></a>
-                        <a href="www.youtube.com/pichauinfo"><img class="img-links-social"
+                        <a href="https://www.youtube.com/channel/UCo4-WGKOvw3QmzW8MRuuFtQ"><img class="img-links-social"
                                 src="./src/assets/YouTube.png" alt=""></a>
-                        <a href="www.twitter.com/pichauinfo"><img class="img-links-social"
+                        <a href="https://twitter.com/pichauinfo"><img class="img-links-social"
                                 src="./src/assets/Twitter.png" alt=""></a>
                         <a href="https://www.tiktok.com/@pichauoficial"><img class="img-links-social"
                                 src="./src/assets/TikTok.png" alt=""></a>
