--- a/index.html
+++ b/index.html
@@ -151,44 +151,46 @@
 
     </main>
 
-    <footer id="container-footer" class="secao">
+    <footer class="secao">
 
-        <div class="container-footer-mobile">
-            <div class="container-link-redes-monitor">
-                <div class="container-links-redes-offmonitor">
+        <section id="container-footer">
+            <div class="container-footer-mobile">
+                <div class="container-link-redes-monitor">
+                    <div class="container-links-redes-offmonitor">
+                        <div>
+                            <h1 class="titulo-monitor">CEPHEUS</h1>
+                        </div>
+
+                        <div class="redes-sociais">
+                            <a href="https://www.instagram.com/pichauoficial/"><img class="img-links-social"
+                                    src="./src/assets/Instagram.png" alt=""></a>
+                            <a href="https://www.facebook.com/PichauInfo/?locale=pt_BR"><img class="img-links-social"
+                                    src="./src/assets/Facebook.png" alt=""></a>
+                            <a href="https://www.youtube.com/channel/UCo4-WGKOvw3QmzW8MRuuFtQ"><img
+                                    class="img-links-social" src="./src/assets/YouTube.png" alt=""></a>
+                            <a href="https://twitter.com/pichauinfo"><img class="img-links-social"
+                                    src="./src/assets/Twitter.png" alt=""></a>
+                            <a href="https://www.tiktok.com/@pichauoficial"><img class="img-links-social"
+                                    src="./src/assets/TikTok.png" alt=""></a>
+                        </div>
+
+                        <div class="btn-footer">
+                            <a href="https://www.pichau.com.br/search?q=cepheus"><button class="btn-compre-agora">Compre
+                                    agora</button></a>
+                        </div>
+
+                    </div>
                     <div>
-                        <h1 class="titulo-monitor">CEPHEUS</h1>
+                        <img class="monitor-footer-img" src="./src/assets/monitor-footer.png" alt="">
                     </div>
-
-                    <div class="redes-sociais">
-                        <a href="https://www.instagram.com/pichauoficial/"><img class="img-links-social"
-                                src="./src/assets/Instagram.png" alt=""></a>
-                        <a href="https://www.facebook.com/PichauInfo/?locale=pt_BR"><img class="img-links-social"
-                                src="./src/assets/Facebook.png" alt=""></a>
-                        <a href="https://www.youtube.com/channel/UCo4-WGKOvw3QmzW8MRuuFtQ"><img class="img-links-social"
-                                src="./src/assets/YouTube.png" alt=""></a>
-                        <a href="https://twitter.com/pichauinfo"><img class="img-links-social"
-                                src="./src/assets/Twitter.png" alt=""></a>
-                        <a href="https://www.tiktok.com/@pichauoficial"><img class="img-links-social"
-                                src="./src/assets/TikTok.png" alt=""></a>
-                    </div>
-
-                    <div class="btn-footer">
-                        <a href="https://www.pichau.com.br/search?q=cepheus"><button class="btn-compre-agora">Compre
-                                agora</button></a>
-                    </div>
-
                 </div>
-                <div>
-                    <img class="monitor-footer-img" src="./src/assets/monitor-footer.png" alt="">
+
+                <div class="copyright-img">
+                    <img src="./src/assets/logo-pichau-footer.png" alt="monitor-3d">
+                    <p>Copyright © 2024 - Pichau Gaming - Todos os direitos reservados</p>
                 </div>
             </div>
-
-            <div class="copyright-img">
-                <img src="./src/assets/logo-pichau-footer.png" alt="monitor-3d">
-                <p>Copyright © 2024 - Pichau Gaming - Todos os direitos reservados</p>
-            </div>
-        </div>
+        </section>
 
     </footer>
 
